@@ -1,15 +1,11 @@
 package de.tum.in.www1.artemis.metis;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
-import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -26,6 +22,8 @@ import de.tum.in.www1.artemis.web.websocket.dto.metis.PostDTO;
 
 class AnswerMessageIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTest {
 
+    private static final String TEST_PREFIX = "answermessageint";
+
     @Autowired
     private AnswerPostRepository answerPostRepository;
 
@@ -33,26 +31,21 @@ class AnswerMessageIntegrationTest extends AbstractSpringIntegrationBambooBitbuc
 
     private List<Post> existingPostsWithAnswersCourseWide;
 
-    private List<AnswerPost> existingAnswerPosts;
-
     private Long courseId;
 
     @BeforeEach
     void initTestCase() {
 
-        database.addUsers(5, 5, 4, 1);
+        database.addUsers(TEST_PREFIX, 5, 5, 4, 1);
 
         // initialize test setup and get all existing posts with answers (four posts, one in each context, are initialized with one answer each): 4 answers in total (with author
         // student1)
-        List<Post> existingPostsAndConversationPostsWithAnswers = database.createPostsWithAnswerPostsWithinCourse().stream().filter(coursePost -> (coursePost.getAnswers() != null))
-                .toList();
+        List<Post> existingPostsAndConversationPostsWithAnswers = database.createPostsWithAnswerPostsWithinCourse(TEST_PREFIX).stream()
+                .filter(coursePost -> (coursePost.getAnswers() != null)).toList();
 
-        List<Post> existingPostsWithAnswers = existingPostsAndConversationPostsWithAnswers.stream().filter(post -> post.getConversation() == null).collect(Collectors.toList());
+        List<Post> existingPostsWithAnswers = existingPostsAndConversationPostsWithAnswers.stream().filter(post -> post.getConversation() == null).toList();
 
         existingConversationPostsWithAnswers = existingPostsAndConversationPostsWithAnswers.stream().filter(post -> post.getConversation() != null).collect(Collectors.toList());
-
-        // get all answerPosts
-        existingAnswerPosts = existingPostsAndConversationPostsWithAnswers.stream().map(Post::getAnswers).flatMap(Collection::stream).toList();
 
         // get all existing posts with answers in exercise context
         List<Post> existingPostsWithAnswersInExercise = existingPostsWithAnswers.stream()
@@ -68,53 +61,55 @@ class AnswerMessageIntegrationTest extends AbstractSpringIntegrationBambooBitbuc
         doNothing().when(simpMessageSendingOperations).convertAndSendToUser(any(), any(), any());
     }
 
-    @AfterEach
-    void tearDown() {
-        database.resetDatabase();
-    }
-
     // CREATE
 
     @Test
-    @WithMockUser(username = "tutor1", roles = "USER")
+    @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "USER")
     void testCreateConversationAnswerPost() throws Exception {
         AnswerPost answerPostToSave = createAnswerPost(existingConversationPostsWithAnswers.get(0));
+
+        var countBefore = answerPostRepository.count();
 
         AnswerPost createdAnswerPost = request.postWithResponseBody("/api/courses/" + courseId + "/answer-messages", answerPostToSave, AnswerPost.class, HttpStatus.CREATED);
         database.assertSensitiveInformationHidden(createdAnswerPost);
         // should not be automatically post resolving
         assertThat(createdAnswerPost.doesResolvePost()).isFalse();
         checkCreatedAnswerPost(answerPostToSave, createdAnswerPost);
-        assertThat(existingAnswerPosts.size() + 1).isEqualTo(answerPostRepository.count());
+        assertThat(answerPostRepository.count()).isEqualTo(countBefore + 1);
 
         // both conversation participants should be notified
         verify(messagingTemplate, times(2)).convertAndSendToUser(anyString(), anyString(), any(PostDTO.class));
     }
 
     @Test
-    @WithMockUser(username = "student1", roles = "USER")
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testCreateConversationAnswerPost_badRequest() throws Exception {
         AnswerPost answerPostToSave = createAnswerPost(existingConversationPostsWithAnswers.get(0));
         answerPostToSave.setId(999L);
 
+        var countBefore = answerPostRepository.count();
+
         AnswerPost notCreatedAnswerPost = request.postWithResponseBody("/api/courses/" + courseId + "/answer-messages", answerPostToSave, AnswerPost.class, HttpStatus.BAD_REQUEST);
         assertThat(notCreatedAnswerPost).isNull();
-        assertThat(answerPostRepository.count()).isEqualTo(existingAnswerPosts.size());
+        assertThat(answerPostRepository.count()).isEqualTo(countBefore);
 
         // conversation participants should not be notified
         verify(messagingTemplate, never()).convertAndSendToUser(anyString(), anyString(), any(PostDTO.class));
     }
 
     @Test
-    @WithMockUser(username = "student3", roles = "USER")
+    @WithMockUser(username = TEST_PREFIX + "student3", roles = "USER")
     void testCreateConversationAnswerPost_forbidden() throws Exception {
         // only participants of a conversation can create posts for it
         // attempt to save new answerPost under someone elses conversation
         AnswerPost answerPostToSave = createAnswerPost(existingConversationPostsWithAnswers.get(0));
+
+        var countBefore = answerPostRepository.count();
+
         AnswerPost notCreatedAnswerPost = request.postWithResponseBody("/api/courses/" + courseId + "/answer-messages", answerPostToSave, AnswerPost.class, HttpStatus.FORBIDDEN);
 
         assertThat(notCreatedAnswerPost).isNull();
-        assertThat(answerPostRepository.count()).isEqualTo(existingAnswerPosts.size());
+        assertThat(answerPostRepository.count()).isEqualTo(countBefore);
 
         // conversation participants should not be notified
         verify(messagingTemplate, never()).convertAndSendToUser(anyString(), anyString(), any(PostDTO.class));
@@ -123,7 +118,7 @@ class AnswerMessageIntegrationTest extends AbstractSpringIntegrationBambooBitbuc
     // UPDATE
 
     @Test
-    @WithMockUser(username = "student1")
+    @WithMockUser(username = TEST_PREFIX + "student1")
     void testEditConversationAnswerPost() throws Exception {
         // conversation answerPost of student1 must be editable by them
         AnswerPost conversationAnswerPostToUpdate = existingConversationPostsWithAnswers.get(0).getAnswers().iterator().next();
@@ -139,7 +134,7 @@ class AnswerMessageIntegrationTest extends AbstractSpringIntegrationBambooBitbuc
     }
 
     @Test
-    @WithMockUser(username = "tutor1", roles = "TA")
+    @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
     void testEditConversationAnswerPost_forbidden() throws Exception {
         // conversation answerPost of student1 must not be editable by tutors
         AnswerPost conversationAnswerPostToUpdate = existingConversationPostsWithAnswers.get(0).getAnswers().iterator().next();
@@ -155,24 +150,26 @@ class AnswerMessageIntegrationTest extends AbstractSpringIntegrationBambooBitbuc
     }
 
     @Test
-    @WithMockUser(username = "student1", roles = "USER")
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testEditAnswerPostWithIdIsNull_badRequest() throws Exception {
         // updated answerMessage and provided answerMessageId should match
         AnswerPost conversationAnswerPostToUpdate = existingConversationPostsWithAnswers.get(0).getAnswers().iterator().next();
         conversationAnswerPostToUpdate.setContent("User changes one of their conversation answerPosts");
 
+        var countBefore = answerPostRepository.count();
+
         AnswerPost notUpdatedAnswerPost = request.putWithResponseBody("/api/courses/" + courseId + "/answer-messages/" + 999L, conversationAnswerPostToUpdate, AnswerPost.class,
                 HttpStatus.BAD_REQUEST);
 
         assertThat(notUpdatedAnswerPost).isNull();
-        assertThat(answerPostRepository.count()).isEqualTo(existingAnswerPosts.size());
+        assertThat(answerPostRepository.count()).isEqualTo(countBefore);
 
         // conversation participants should not be notified
         verify(messagingTemplate, never()).convertAndSendToUser(anyString(), anyString(), any(PostDTO.class));
     }
 
     @Test
-    @WithMockUser(username = "student1", roles = "USER")
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testEditAnswerPostWithInvalidId_badRequest() throws Exception {
         AnswerPost answerPostToUpdate = createAnswerPost(existingPostsWithAnswersCourseWide.get(0));
 
@@ -185,7 +182,7 @@ class AnswerMessageIntegrationTest extends AbstractSpringIntegrationBambooBitbuc
     }
 
     @Test
-    @WithMockUser(username = "student1", roles = "USER")
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testEditAnswerPostWithWrongCourseId_badRequest() throws Exception {
         AnswerPost answerPostToUpdate = createAnswerPost(existingPostsWithAnswersCourseWide.get(0));
         Course dummyCourse = database.createCourse();
@@ -201,36 +198,37 @@ class AnswerMessageIntegrationTest extends AbstractSpringIntegrationBambooBitbuc
     // DELETE
 
     @Test
-    @WithMockUser(username = "student1", roles = "USER")
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testDeleteAnswerPost_asTutor_notFound() throws Exception {
-        request.delete("/api/courses/" + courseId + "/answer-messages/" + 9999L, HttpStatus.NOT_FOUND);
-        assertThat(answerPostRepository.count()).isEqualTo(existingAnswerPosts.size());
+        var countBefore = answerPostRepository.count();
+        request.delete("/api/courses/" + courseId + "/answer-messages/" + 999999999L, HttpStatus.NOT_FOUND);
+        assertThat(answerPostRepository.count()).isEqualTo(countBefore);
 
         // conversation participants should not be notified
         verify(messagingTemplate, never()).convertAndSendToUser(anyString(), anyString(), any(PostDTO.class));
     }
 
     @Test
-    @WithMockUser(username = "student1")
+    @WithMockUser(username = TEST_PREFIX + "student1")
     void testDeleteConversationPost() throws Exception {
         // conversation post of student1 must be deletable by them
         AnswerPost conversationAnswerPostToDelete = existingConversationPostsWithAnswers.get(0).getAnswers().iterator().next();
         request.delete("/api/courses/" + courseId + "/answer-messages/" + conversationAnswerPostToDelete.getId(), HttpStatus.OK);
 
-        assertThat(answerPostRepository.count()).isEqualTo(existingAnswerPosts.size() - 1);
+        assertThat(answerPostRepository.findById(conversationAnswerPostToDelete.getId())).isEmpty();
 
         // both conversation participants should be notified
         verify(messagingTemplate, times(2)).convertAndSendToUser(anyString(), anyString(), any(PostDTO.class));
     }
 
     @Test
-    @WithMockUser(username = "tutor1", roles = "TA")
+    @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
     void testDeleteConversationPost_forbidden() throws Exception {
         // conversation post of student1 must not be deletable by tutors
         AnswerPost conversationAnswerPostToDelete = existingConversationPostsWithAnswers.get(0).getAnswers().iterator().next();
         request.delete("/api/courses/" + courseId + "/answer-messages/" + conversationAnswerPostToDelete.getId(), HttpStatus.FORBIDDEN);
 
-        assertThat(answerPostRepository.count()).isEqualTo(existingAnswerPosts.size());
+        assertThat(answerPostRepository.findById(conversationAnswerPostToDelete.getId())).isPresent();
 
         // conversation participants should not be notified
         verify(messagingTemplate, never()).convertAndSendToUser(anyString(), anyString(), any(PostDTO.class));
